@@ -1,5 +1,11 @@
 2008-06-22  Stefan Kost  <ensonic@users.sf.net>
 
+	* docs/reference/gobject/tmpl/value_collection.sgml:
+	* gobject/gvaluecollector.h:
+	  Migrating docs.
+
+2008-06-22  Stefan Kost  <ensonic@users.sf.net>
+
 	* docs/reference/gobject/tmpl/value_arrays.sgml:
 	* gobject/gvaluearray.c:
 	* gobject/gvaluearray.h:
